# 2D-online-game

./: .clangd  CMakeLists.txt  README.md  compile_commands.json  testScript.sh
.cache/clangd/index/: events.cpp.93951AE18D806062.idx  events.hpp.1526B272E6F33B36.idx  events.hpp.4646B0ED8A584F3E.idx  game.cpp.2F2A1C2CEE342ADF.idx  game.hpp.1944B9DFE15F1E6F.idx  game.hpp.20E55CF0BD894E75.idx  game.hpp.6843CEBC1FE42C41.idx  main.cpp.54DB187744707136.idx  main.cpp.72F3092D1F9EA61A.idx  network_client.cpp.12EE4EF22BAD2714.idx  network_client.hpp.F24A8B2C4F23915D.idx  network_server.cpp.7BCA114403F2C445.idx  network_server.hpp.F5FDC66325116B70.idx  packet.hpp.4417537436D20137.idx  renderer.cpp.D41891670EB793C0.idx  renderer.hpp.E19332083B1C8655.idx  renderer.hpp.FD05D942FEED87EF.idx  server_game.hpp.3DB96CCB2B5FC866.idx  settings.cpp.CAE25986E4E6B2B9.idx  settings.hpp.1CB600B58D4C1C45.idx  settings.hpp.21B378B4DD0E0997.idx
src/: events.cpp  events.hpp  game.cpp  game.hpp  main.cpp  network_manager.cpp  network_manager.hpp  renderer.cpp  renderer.hpp  settings.cpp  settings.hpp  settings.json  types.hpp
src/client/: events.cpp  events.hpp  game.hpp  main.cpp  network.cpp  network.hpp  packet.hpp  player.hpp  settings.hpp
src/client/config/: settings.json
src/client/events/: events.cpp  events.hpp
src/client/game/: game.cpp  game.hpp
src/client/networking/: network_client.cpp  network_client.hpp
src/client/rendering/: renderer.cpp  renderer.hpp
src/client/settings/: settings.cpp  settings.hpp  settings.json
src/common/: packet_types.hpp
src/network/: network.cpp  network.hpp  network_client.cpp  network_client.hpp  network_server.cpp  network_server.hpp  packet.hpp
src/server/: main.cpp
src/server/networking/: network_server.cpp  network_server.hpp
